--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 </head>
 
@@ -66,7 +67,9 @@
         </div>
     </nav>
     <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
+        <div class="animate__animated animate__flip animate__delay-2s">
+            <h1 class="display-4 ">Hello, world!</h1>
+        </div>
         <p class="lead">Just a fictitious landing page</p>
         <hr class="my-4">
         <p>With the help of HTML, CSS, JAVASCRIPT, BOOTSTRAP, Google Api and Plethora of Modern Techniques !</p>
