--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 </head>
 
@@ -66,7 +67,10 @@
         </div>
     </nav>
     <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
+        <div class="animate__animated animate__flip animate__delay-2s">
+            <h1 class="display-4 ">Hello, world!</h1>
+        </div>
+
         <p class="lead">Just a fictitious landing page</p>
         <hr class="my-4">
         <p>With the help of HTML, CSS, JAVASCRIPT, BOOTSTRAP, Google Api and Plethora of Modern Techniques !</p>
@@ -144,8 +148,74 @@
             <img class="secondimg" class="iamsecimg" src="./heylagostechie-IgUR1iX0mqM-unsplash.jpg" alt="">
         </div>
     </div>
-
     </div>
+
+
+    <div class="row">
+        <div class="col-md-6 col-sm-12 col-lg-6">
+            <img class="firstimg" src="./mimi-thian-IPBGKYnuz8Y-unsplash.jpg" alt="">
+        </div>
+        <div class="col-md-6 col-sm-12 col-lg-6">
+            <div class="card-body iamfirst">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6 col-sm-12 col-lg-6">
+            <div class="card-body iamsecond">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+
+        <div class="col-md-6 col-sm-12 col-lg-6">
+            <img class="secondimg" class="iamsecimg" src="./helena-lopes-UZe35tk5UoA-unsplash.jpg" alt="">
+        </div>
+    </div>
+    </div>
+
+
+
+    <div class="row">
+        <div class="col-md-6 col-sm-12 col-lg-6">
+            <img class="firstimg" src="./annie-spratt-QckxruozjRg-unsplash.jpg" alt="">
+        </div>
+        <div class="col-md-6 col-sm-12 col-lg-6">
+            <div class="card-body iamfirst">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6 col-sm-12 col-lg-6">
+            <div class="card-body iamsecond">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                    content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+
+        <div class="col-md-6 col-sm-12 col-lg-6">
+            <img class="secondimg" class="iamsecimg" src="./annie-spratt-hCb3lIB8L8E-unsplash.jpg" alt="">
+        </div>
+    </div>
+    </div>
+
+
+
+
 
     <div class="footer">
         <div class="card-1">
