--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 </head>
 
@@ -67,7 +68,7 @@
         </div>
     </nav>
     <div class="jumbotron">
-        <div class="animate__animated animate__flip animate__delay-2s">
+        <div class="animate__animated animate__flip animate__delay-1s">
             <h1 class="display-4 ">Hello, world!</h1>
         </div>
 
@@ -120,7 +121,7 @@
         </a>
     </div>
 
-    <div class="row">
+    <div class="row" data-aos="fade-left">
         <div class="col-md-6 col-sm-12 col-lg-6">
             <img class="firstimg" src="./mimi-thian-vdXMSiX-n6M-unsplash.jpg" alt="">
         </div>
@@ -134,7 +135,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" data-aos="fade-right">
         <div class="col-md-6 col-sm-12 col-lg-6">
             <div class="card-body iamsecond">
                 <h5 class="card-title">Card title</h5>
@@ -150,7 +151,8 @@
     </div>
     </div>
 
-    <div class="row">
+
+    <div class="row" data-aos="fade-left">
         <div class="col-md-6 col-sm-12 col-lg-6">
             <img class="firstimg" src="./mimi-thian-IPBGKYnuz8Y-unsplash.jpg" alt="">
         </div>
@@ -164,7 +166,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" data-aos="fade-right">
         <div class="col-md-6 col-sm-12 col-lg-6">
             <div class="card-body iamsecond">
                 <h5 class="card-title">Card title</h5>
@@ -182,7 +184,7 @@
 
 
 
-    <div class="row">
+    <div class="row" data-aos="fade-left">
         <div class="col-md-6 col-sm-12 col-lg-6">
             <img class="firstimg" src="./annie-spratt-QckxruozjRg-unsplash.jpg" alt="">
         </div>
@@ -196,7 +198,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" data-aos="fade-right">
         <div class="col-md-6 col-sm-12 col-lg-6">
             <div class="card-body iamsecond">
                 <h5 class="card-title">Card title</h5>
@@ -211,10 +213,6 @@
         </div>
     </div>
     </div>
-
-
-
-
 
     <div class="footer">
         <div class="card-1">
@@ -237,6 +235,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 400,
+            duration: 1000
+        });
+    </script>
 
 </body>
 
