--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 </head>
 
@@ -68,7 +67,7 @@
         </div>
     </nav>
     <div class="jumbotron">
-        <div class="animate__animated animate__flip animate__delay-1s">
+        <div class="animate__animated animate__flip animate__delay-1.5s">
             <h1 class="display-4 ">Hello, world!</h1>
         </div>
 
@@ -121,7 +120,7 @@
         </a>
     </div>
 
-    <div class="row" data-aos="fade-left">
+    <div class="row">
         <div class="col-md-6 col-sm-12 col-lg-6">
             <img class="firstimg" src="./mimi-thian-vdXMSiX-n6M-unsplash.jpg" alt="">
         </div>
@@ -135,7 +134,7 @@
         </div>
     </div>
 
-    <div class="row" data-aos="fade-right">
+    <div class="row">
         <div class="col-md-6 col-sm-12 col-lg-6">
             <div class="card-body iamsecond">
                 <h5 class="card-title">Card title</h5>
@@ -152,7 +151,7 @@
     </div>
 
 
-    <div class="row" data-aos="fade-left">
+    <div class="row">
         <div class="col-md-6 col-sm-12 col-lg-6">
             <img class="firstimg" src="./mimi-thian-IPBGKYnuz8Y-unsplash.jpg" alt="">
         </div>
@@ -166,7 +165,7 @@
         </div>
     </div>
 
-    <div class="row" data-aos="fade-right">
+    <div class="row">
         <div class="col-md-6 col-sm-12 col-lg-6">
             <div class="card-body iamsecond">
                 <h5 class="card-title">Card title</h5>
@@ -184,7 +183,7 @@
 
 
 
-    <div class="row" data-aos="fade-left">
+    <div class="row">
         <div class="col-md-6 col-sm-12 col-lg-6">
             <img class="firstimg" src="./annie-spratt-QckxruozjRg-unsplash.jpg" alt="">
         </div>
@@ -198,7 +197,7 @@
         </div>
     </div>
 
-    <div class="row" data-aos="fade-right">
+    <div class="row">
         <div class="col-md-6 col-sm-12 col-lg-6">
             <div class="card-body iamsecond">
                 <h5 class="card-title">Card title</h5>
@@ -213,6 +212,10 @@
         </div>
     </div>
     </div>
+
+
+
+
 
     <div class="footer">
         <div class="card-1">
@@ -235,14 +238,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
-
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init({
-            offset: 400,
-            duration: 1000
-        });
-    </script>
 
 </body>
 
