--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
         <hr class="my-4">
         <p>With the help of HTML, CSS, JAVASCRIPT, BOOTSTRAP, Google Api and Plethora of Modern Techniques !</p>
         <div class="bannerbtn">
-            <a style="margin-right: 12px;" class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            <a style="margin-right: 12px;" class="btn btn-primary btn-lg" href="./services.html" role="button">Learn more</a>
             <a class="btn btn-success btn-lg" href="./signup.html" role="button">Join Us</a>
-
         </div>
     </div>
 
