--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 
     <!--Section: Contact v.2-->
     <section class="mb-4">
-
+<br>
         <!--Section heading-->
         <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
         <!--Section description-->
@@ -71,7 +71,7 @@
         <div class="row">
 
             <!--Grid column-->
-            <div class="col-md-9 mb-md-0 mb-5">
+            <div class="col-md-9 mb-md-0 mb-5" style="margin-top: 35px;">
                 <form id="contact-form" name="contact-form" action="./index.html" method="GET">
 
                     <!--Grid row-->
@@ -130,8 +130,6 @@
                     </div>
                 </form>
 
-
-                <div class="status"></div>
             </div>
             <!--Grid column-->
 
@@ -158,7 +156,7 @@
 
     </section>
 
-    <iframe width="60%" height="450" style="border: 0; margin: 20px; margin-left: 2%;" loading="lazy" allowfullscreen
+    <iframe width="95%" height="450" style="border: 0; margin: 20px; margin-left: 3%;" loading="lazy" allowfullscreen
         src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAjEIZs8mX7yEfSSx6rMHskAxYo5seWPBM
     &q=3027+West+12th+Street,Coney+Island">
     </iframe>
