--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@
     &q=3027+West+12th+Street,Coney+Island">
     </iframe>
 
-    <h1 style="margin-left: 2%; font-size: 15px;">This is a fictitious location inspired by the web series, Mr. Robot!
+    <h1 class="text-muted" style="margin-left: 3%; font-size: 15px;">This is a fictitious location inspired by the web series, Mr. Robot!
     </h1>
 
     <div class="footer">
