--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 <body>
 
 
-    <img src="./undraw_page_not_found_su7k.png" alt="">
+    <img src="./under_construction_46pa.png" alt="">
     <div class="alert alert-success" role="alert" style="margin: 20px;">
         <h4 class="alert-heading" style="font-weight: bold;">Temporary Unavailable</h4>
         <hr>
-        <p class="text-muted">All data removed by Vivs </p>
+        <p class="text-muted">Website is under maintenance !</p>
     </div>
 
 
