--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
 
     <img src="./under_construction_46pa.png" alt="">
+    <div class="container">
+        <h3 class="text-center text-danger">404 Something Went Wrong</h3>
+    </div>
     <div class="alert alert-success" role="alert" style="margin: 20px;">
         <h4 class="alert-heading" style="font-weight: bold;">Temporary Unavailable</h4>
         <hr>
