--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
     <div class="alert alert-success" role="alert" style="margin: 20px;">
         <h4 class="alert-heading" style="font-weight: bold;">Temporary Unavailable</h4>
         <hr>
-        <p class="text-muted">Website is under maintenance !</p>
+        <p class="text-muted">Website is under maintenance !
+            <br>
+            Try again some another day.</p>
+        <a target="_blank" href="./index.html">
+        <button class="btn btn-primary">Refresh</button>
+        </a>
     </div>
 
 
