--- a/index.html
+++ b/index.html
@@ -21,19 +21,15 @@
 
 <body>
 
-
     <img src="./under_construction_46pa.png" alt="">
-    <div class="container">
-        <h3 class="text-center text-danger">404 Something Went Wrong</h3>
-    </div>
+    
     <div class="alert alert-success" role="alert" style="margin: 20px;">
-        <h4 class="alert-heading" style="font-weight: bold;">Temporary Unavailable</h4>
+        <h3 class="text-secondary">404 Something Went Wrong</h3>
         <hr>
-        <p class="text-muted">Website is under maintenance !
-            <br>
-            Try again some another day.</p>
+        <p class="text-danger">Website is under maintenance !
+            Try again sometimes later.</p>
         <a target="_blank" href="./index.html">
-        <button class="btn btn-primary">Refresh</button>
+        <button class="btn btn-secondary">Refresh</button>
         </a>
     </div>
 
